--- a/calchart/static/sass/partials/_functions.scss
+++ b/calchart/static/sass/partials/_functions.scss
@@ -3,6 +3,7 @@ $z-layers: (
     toolbar: 100,
     menu: 200,
     popup: 300,
+    messages: 400,
 );
 
 @function z-index($key) {
